// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql-client basic batch mutation 1`] = `"mutation { m0: insert_vcs_Membership_one (object: {vcs_User: {data: {uid: \\"ashnet16\\", source: \\"GitHub\\", origin: \\"myghsrc\\"}, on_conflict: {constraint: {value: \\"vcs_User_pkey\\"}, update_columns: [{value: \\"uid\\"}, {value: \\"source\\"}]}}, vcs_Organization: {data: {uid: \\"faros-ai\\", source: \\"GitHub\\", origin: \\"myghsrc\\"}, on_conflict: {constraint: {value: \\"vcs_Organization_pkey\\"}, update_columns: [{value: \\"uid\\"}, {value: \\"source\\"}]}}, origin: \\"myghsrc\\"}, on_conflict: {constraint: {value: \\"vcs_Membership_pkey\\"}, update_columns: [{value: \\"origin\\"}, {value: \\"refreshedAt\\"}]}) { id } m1: insert_vcs_User_one (object: {uid: \\"betafood\\", type: {category: \\"User\\", detail: \\"user\\"}, source: \\"GitHub\\", origin: \\"myghsrc\\"}, on_conflict: {constraint: {value: \\"vcs_User_pkey\\"}, update_columns: [{value: \\"email\\"}, {value: \\"name\\"}, {value: \\"origin\\"}, {value: \\"refreshedAt\\"}, {value: \\"type\\"}, {value: \\"url\\"}]}) { id } }"`;

exports[`graphql-client write batch updates update_columns bug 1`] = `"mutation { m0: insert_tms_Task_one (object: {uid: \\"9\\", source: \\"jira\\", origin: \\"mytestsource\\"}, on_conflict: {constraint: tms_Task_pkey, update_columns: [origin]}) { id refreshedAt } m1: insert_tms_Task_one (object: {uid: \\"7\\", source: \\"jira\\", origin: \\"mytestsource\\"}, on_conflict: {constraint: tms_Task_pkey, update_columns: [origin]}) { id refreshedAt } m2: insert_tms_Task_one (object: {uid: \\"7\\", tms_Task: {data: {uid: \\"9\\", source: \\"jira\\"}, on_conflict: {constraint: tms_Task_pkey, update_columns: [source, uid]}}, source: \\"jira\\", origin: \\"mytestsource\\"}, on_conflict: {constraint: tms_Task_pkey, update_columns: [origin, parent]}) { id refreshedAt } }"`;

exports[`graphql-client write batch upsert allow upsert null values 1`] = `"mutation { insert_vcs_Commit (objects: [{sha: \\"c2\\", authorId: null, message: null, origin: \\"mytestsource\\"}], on_conflict: {constraint: vcs_Commit_pkey, update_columns: [authorId, message, origin, refreshedAt]}) { returning { id refreshedAt repositoryId sha } } }"`;

exports[`graphql-client write batch upsert basic end-to-end 1`] = `"mutation { insert_vcs_Organization (objects: [{uid: \\"faros-ai\\", source: \\"GitHub\\"}], on_conflict: {constraint: vcs_Organization_pkey, update_columns: [source, uid]}) { returning { id refreshedAt source uid } } }"`;

exports[`graphql-client write batch upsert basic end-to-end 2`] = `"mutation { insert_vcs_Repository (objects: [{name: \\"hermes\\", organizationId: \\"t1|gql-e2e-v2|GitHub|faros-ai\\"}, {name: \\"metis\\", organizationId: \\"t1|gql-e2e-v2|GitHub|faros-ai\\"}], on_conflict: {constraint: vcs_Repository_pkey, update_columns: [name, organizationId]}) { returning { id refreshedAt name organizationId } } }"`;

exports[`graphql-client write batch upsert basic end-to-end 3`] = `"mutation { insert_vcs_Branch (objects: [{name: \\"foo\\", origin: \\"mytestsource\\", repositoryId: \\"t1|gql-e2e-v2|metis|t1|gql-e2e-v2|GitHub|faros-ai\\"}, {name: \\"main\\", origin: \\"mytestsource\\", repositoryId: \\"t1|gql-e2e-v2|hermes|t1|gql-e2e-v2|GitHub|faros-ai\\"}], on_conflict: {constraint: vcs_Branch_pkey, update_columns: [origin, refreshedAt]}) { returning { id refreshedAt name repositoryId } } }"`;

exports[`graphql-client write batch upsert mergeByPrimaryKey - object value 1`] = `
Array [
  Object {
    "origin": "c1d1-2",
    "type": Object {
      "category": "c1",
      "detail": "d1",
    },
    "uid": "tovbinm",
  },
  Object {
    "origin": "c1d2",
    "type": Object {
      "category": "c1",
      "detail": "d2",
    },
    "uid": "tovbinm",
  },
]
`;

exports[`graphql-client write batch upsert mergeByPrimaryKey 1`] = `
Array [
  Object {
    "htmlUrl": "https://github.com/tovbinm",
    "name": "tovbinm",
    "origin": "mytestsource2",
    "source": "GitHub",
    "type": Object {
      "category": "User",
      "detail": "user",
    },
    "uid": "tovbinm",
  },
  Object {
    "htmlUrl": "https://github.com/vitalyg",
    "name": "vitalyg",
    "origin": "mytestsource",
    "source": "GitHub",
    "type": Object {
      "foo": "bar",
    },
    "uid": "vitalyg",
  },
  Object {
    "name": "vitality",
    "origin": "mytestsource",
    "source": null,
    "type": Object {
      "foo": "bar",
    },
    "uid": "vitalyg",
  },
  Object {
    "email": "some-email",
    "htmlUrl": "https://github.com/jeniii",
    "name": "some-name",
    "uid": "jeniii",
  },
]
`;

exports[`graphql-client write batch upsert nil uid 1`] = `"mutation { insert_vcs_Organization (objects: [{uid: \\"u1\\", origin: \\"mytestsource\\"}, {uid: \\"u2\\", origin: \\"mytestsource\\"}], on_conflict: {constraint: vcs_Organization_pkey, update_columns: [origin, refreshedAt]}) { returning { id refreshedAt source uid } } }"`;

exports[`graphql-client write batch upsert on_conflict update_columns bug 1`] = `"mutation { insert_vcs_Organization (objects: [{uid: \\"faros-ai\\", source: \\"GitHub\\"}], on_conflict: {constraint: vcs_Organization_pkey, update_columns: [source, uid]}) { returning { id refreshedAt source uid } } }"`;

exports[`graphql-client write batch upsert on_conflict update_columns bug 2`] = `"mutation { insert_vcs_Repository (objects: [{name: \\"hermes\\", organizationId: \\"t1|gql-e2e-v2|GitHub|faros-ai\\"}], on_conflict: {constraint: vcs_Repository_pkey, update_columns: [name, organizationId]}) { returning { id refreshedAt name organizationId } } }"`;

exports[`graphql-client write batch upsert on_conflict update_columns bug 3`] = `"mutation { insert_vcs_Branch (objects: [{name: \\"foo\\", origin: \\"mytestsource\\"}], on_conflict: {constraint: vcs_Branch_pkey, update_columns: [origin, refreshedAt]}) { returning { id refreshedAt name repositoryId } } }"`;

exports[`graphql-client write batch upsert on_conflict update_columns bug 4`] = `"mutation { insert_vcs_Branch (objects: [{name: \\"main\\", origin: \\"mytestsource\\", repositoryId: \\"t1|gql-e2e-v2|hermes|t1|gql-e2e-v2|GitHub|faros-ai\\"}], on_conflict: {constraint: vcs_Branch_pkey, update_columns: [origin, refreshedAt]}) { returning { id refreshedAt name repositoryId } } }"`;

exports[`graphql-client write batch upsert record with null primary key field 1`] = `"mutation { insert_vcs_Organization (objects: [{uid: \\"faros-ai\\", origin: \\"mytestsource\\"}], on_conflict: {constraint: vcs_Organization_pkey, update_columns: [origin, refreshedAt]}) { returning { id refreshedAt source uid } } }"`;

exports[`graphql-client write batch upsert record with timestamptz primary key field 1`] = `"mutation { insert_vcs_User (objects: [{uid: \\"dbruno21\\", source: \\"GitHub\\"}], on_conflict: {constraint: vcs_User_pkey, update_columns: [source, uid]}) { returning { id refreshedAt source uid } } }"`;

exports[`graphql-client write batch upsert record with timestamptz primary key field 2`] = `"mutation { insert_vcs_Organization (objects: [{uid: \\"princode-ar\\", source: \\"GitHub\\"}], on_conflict: {constraint: vcs_Organization_pkey, update_columns: [source, uid]}) { returning { id refreshedAt source uid } } }"`;

exports[`graphql-client write batch upsert record with timestamptz primary key field 3`] = `"mutation { insert_vcs_UserTool (objects: [{tool: {category: \\"GitHubCopilot\\", detail: \\"\\"}, userId: \\"65ecc2833915a71fb0157d2b0d3d9e2b0c6de441\\", organizationId: \\"d48dfb1908821e827f371cf370964d7131b69f4c\\"}], on_conflict: {constraint: vcs_UserTool_pkey, update_columns: [organizationId, tool, userId]}) { returning { id refreshedAt organizationId tool userId } } }"`;

exports[`graphql-client write batch upsert record with timestamptz primary key field 4`] = `"mutation { insert_vcs_UserToolUsage (objects: [{usedAt: \\"2021-10-14T00:53:33-06:00\\", origin: \\"mytestsource\\", userToolId: \\"f1e4d99accb71ba8ac1b8a1204f84b8211909212\\"}], on_conflict: {constraint: vcs_UserToolUsage_pkey, update_columns: [origin, refreshedAt]}) { returning { id refreshedAt usedAt userToolId } } }"`;

exports[`graphql-client write batch upsert resetData 1`] = `
"query paginatedQuery($id: String, $limit: Int) {
  vcs_Organization(
    where: {_and: [{_and: {origin: {_eq: \\"foo\\"}, refreshedAt: {_lt: \\"2200-01-01T00:00:00.000Z\\"}}}, {id: {_gt: $id}}]}
    order_by: {id: asc}
    limit: $limit
  ) {
    _id: id
    id
  }
}"
`;

exports[`graphql-client write batch upsert resetData 2`] = `
Object {
  "id": "",
  "limit": 3,
}
`;

exports[`graphql-client write batch upsert resetData 3`] = `
"mutation {
      delete_vcs_Organization(where:{id: {_in:[
        \\"00042ddb78c1a5956320e7fbc7ca488517a9caa8\\",\\"0008d73ec6b79910fcbadb7410c4d191e92ce44d\\",\\"0011f5f8600d14dae163a37286aa1cd5e6bf6a71\\"
      ]}}) {
        affected_rows
      }
    }"
`;

exports[`graphql-client write batch upsert resetData 4`] = `undefined`;

exports[`graphql-client write batch upsert resetData 5`] = `
"query paginatedQuery($id: String, $limit: Int) {
  vcs_Organization(
    where: {_and: [{_and: {origin: {_eq: \\"foo\\"}, refreshedAt: {_lt: \\"2200-01-01T00:00:00.000Z\\"}}}, {id: {_gt: $id}}]}
    order_by: {id: asc}
    limit: $limit
  ) {
    _id: id
    id
  }
}"
`;

exports[`graphql-client write batch upsert resetData 6`] = `
Object {
  "id": "0011f5f8600d14dae163a37286aa1cd5e6bf6a71",
  "limit": 3,
}
`;

exports[`graphql-client write batch upsert resetData 7`] = `
"mutation {
      delete_vcs_Organization(where:{id: {_in:[
        \\"0017bcda1dfcf5b5c2db430849a4bf90f8c51be4\\",\\"001d319806cb4e608aec2f47f3a2028c41b64321\\"
      ]}}) {
        affected_rows
      }
    }"
`;

exports[`graphql-client write batch upsert resetData 8`] = `undefined`;

exports[`graphql-client write batch upsert self-referent model 1`] = `"mutation { insert_org_Employee (objects: [{uid: \\"7\\"}], on_conflict: {constraint: org_Employee_pkey, update_columns: [uid]}) { returning { id refreshedAt uid } } }"`;

exports[`graphql-client write batch upsert self-referent model 2`] = `"mutation { insert_org_Employee (objects: [{uid: \\"9\\", origin: \\"mytestsource\\"}], on_conflict: {constraint: org_Employee_pkey, update_columns: [origin, refreshedAt]}) { returning { id refreshedAt uid } } }"`;

exports[`graphql-client write batch upsert self-referent model 3`] = `"mutation { insert_org_Employee (objects: [{uid: \\"10\\", origin: \\"mytestsource\\", managerId: \\"t1|gql-e2e-v2|7\\"}, {uid: \\"7\\", origin: \\"mytestsource\\", managerId: \\"t1|gql-e2e-v2|9\\"}, {uid: \\"8\\", origin: \\"mytestsource\\", managerId: \\"t1|gql-e2e-v2|9\\"}], on_conflict: {constraint: org_Employee_pkey, update_columns: [managerId, origin, refreshedAt]}) { returning { id refreshedAt uid } } }"`;

exports[`graphql-client write batch upsert update as upsert 1`] = `"mutation { insert_vcs_Organization (objects: [{uid: \\"playg\\", source: \\"Bitbucket\\"}], on_conflict: {constraint: vcs_Organization_pkey, update_columns: [source, uid]}) { returning { id refreshedAt source uid } } }"`;

exports[`graphql-client write batch upsert update as upsert 2`] = `"mutation { insert_vcs_Repository (objects: [{name: \\"repo1\\", organizationId: \\"4d1025a2cfb95b311b9871a49de3a56bf594beee\\"}], on_conflict: {constraint: vcs_Repository_pkey, update_columns: [name, organizationId]}) { returning { id refreshedAt name organizationId } } }"`;

exports[`graphql-client write batch upsert update as upsert 3`] = `"mutation { insert_vcs_Commit (objects: [{sha: \\"b500332b58c74fc15302c8961e54facf66c16c44\\", origin: \\"my-origin\\", repositoryId: \\"f9b8248bfcbd563eb23d05a8b1c188a873de787e\\"}], on_conflict: {constraint: vcs_Commit_pkey, update_columns: [origin, refreshedAt]}) { returning { id refreshedAt repositoryId sha } } }"`;

exports[`graphql-client write batch upsert update as upsert 4`] = `"mutation { insert_vcs_PullRequest (objects: [{number: 2, origin: \\"my-origin\\", repositoryId: \\"f9b8248bfcbd563eb23d05a8b1c188a873de787e\\"}], on_conflict: {constraint: vcs_PullRequest_pkey, update_columns: [origin, refreshedAt]}) { returning { id refreshedAt number repositoryId } } }"`;

exports[`graphql-client write batch upsert update as upsert 5`] = `"mutation { m0: insert_vcs_PullRequest_one (object: {number: 2, repository: {data: {name: \\"repo1\\", organization: {data: {uid: \\"playg\\", source: \\"Bitbucket\\"}, on_conflict: {constraint: vcs_Organization_pkey, update_columns: [source, uid]}}}, on_conflict: {constraint: vcs_Repository_pkey, update_columns: [name, organizationId]}}, mergeCommit: {data: {sha: \\"b500332b58c74fc15302c8961e54facf66c16c44\\", repository: {data: {name: \\"repo1\\", organization: {data: {uid: \\"playg\\", source: \\"Bitbucket\\"}, on_conflict: {constraint: vcs_Organization_pkey, update_columns: [source, uid]}}}, on_conflict: {constraint: vcs_Repository_pkey, update_columns: [name, organizationId]}}}, on_conflict: {constraint: vcs_Commit_pkey, update_columns: [repositoryId, sha]}}, mergedAt: \\"2022-09-21T03:00:27.505Z\\", origin: \\"my-transform-origin\\"}, on_conflict: {constraint: vcs_PullRequest_pkey, update_columns: [mergeCommitId, mergedAt]}) { id } }"`;

exports[`graphql-client write batch upsert upsert same object 1`] = `"mutation { insert_vcs_User (objects: [{uid: \\"jeniii\\", name: \\"some-name\\", email: \\"some-email\\", htmlUrl: \\"https://github.com/jeniii\\", origin: \\"mytestsource\\"}], on_conflict: {constraint: vcs_User_pkey, update_columns: [email, htmlUrl, name, origin, refreshedAt]}) { returning { id refreshedAt source uid } } }"`;

exports[`groupByKeys 1 group of 2 1`] = `
Array [
  Array [
    "u0a",
    "u0b",
  ],
]
`;

exports[`groupByKeys 2 groups of 1 1`] = `
Array [
  Array [
    "u0a",
  ],
  Array [
    "u1a",
  ],
]
`;

exports[`groupByKeys 2 groups of mix 1`] = `
Array [
  Array [
    "u0a",
  ],
  Array [
    "u1a",
    "u1b",
  ],
]
`;

exports[`groupByKeys 3 groups of 2 1`] = `
Array [
  Array [
    "u0a",
    "u0b",
  ],
  Array [
    "u1a",
    "u1b",
  ],
  Array [
    "u2a",
    "u2b",
  ],
]
`;

exports[`toLevels ignore other models 1`] = `
Array [
  Array [
    "u0",
  ],
  Array [
    "u2",
  ],
]
`;

exports[`toLevels imbalanced tree 1`] = `
Array [
  Array [
    "u0",
    "u3",
  ],
  Array [
    "u1",
  ],
  Array [
    "u2",
  ],
]
`;

exports[`toLevels simple chain 1`] = `
Array [
  Array [
    "u0",
  ],
  Array [
    "u1",
  ],
  Array [
    "u2",
  ],
]
`;

exports[`toLevels simple chain 2`] = `
Array [
  Array [
    "u0",
  ],
  Array [
    "u1",
  ],
]
`;

exports[`toLevels simple chain 3`] = `
Array [
  Array [
    "u0",
  ],
]
`;

exports[`toLevels simple tree 1`] = `
Array [
  Array [
    "u0",
    "u1",
  ],
  Array [
    "u2",
  ],
]
`;
